--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 <!-- MOBILE IMG + NAV -->
-<h1 id="mobiletop">Basil Halperin</h1>
+<h1 id="mobiletop">Rubi Hudson</h1>
 
 <img src="img/rubi_hudson.jpg" id="mobilephoto" width="100%" align="top" /> 
 <div class="mobileleft">
