--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="twitter:url" content="https://www.rubijhudson.com/">
 <meta name="twitter:card" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
 <meta name="twitter:creator" content="@undo_hubris">
-<meta name="twitter:image" content="img/rubi_hudson.jpg"> 
+<meta name="twitter:image" content="img/rubi_hudson.jpeg"> 
 
 <!--
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
 
 <!-- DESKTOP IMG + NAV -->
 <div class="desktopleft"> 
-    <img src="img/rubi_hudson.jpg" id="desktopphoto" width="100%" align="top"/> 
+    <img src="img/rubi_hudson.jpeg" id="desktopphoto" width="100%" align="top"/> 
 
     <ul id="desktopnav"> 
         <li><a class="active" href="https://rubijhudson.com/"> Home </a></li> 
@@ -54,12 +54,12 @@
 <!-- MOBILE IMG + NAV -->
 <h1 id="mobiletop">Rubi Hudson</h1>
 
-<img src="img/rubi_hudson.jpg" id="mobilephoto" width="100%" align="top" /> 
+<img src="img/rubi_hudson.jpeg" id="mobilephoto" width="100%" align="top" /> 
 <div class="mobileleft">
     <ul id="mobilenav">
         <li><a class="active" href="https://rubijhudson.com/"> Home </a></li> 
         <li><a href="research.html"> Research </a></li> 
-        <li><a href="CV.html"> CV</a> 
+        <li><a href="CV.pdf"> CV</a> 
         <li><a href="https://crossingtherubicon.substack.com/"> Blog </a></li>
         <li> </li> 
     </ul>
