Major rewrite of index and css

--- a/index.html
+++ b/index.html
@@ -1,93 +1,38 @@
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Rubi Hudson</title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta name="description" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
-<meta name="keywords" content="Rubi Hudson, University of Toronto, economics, AI, artificial intelligence, AI safety, mechanism design">
-
-<meta name="twitter:title" content="Rubi Hudson">
-<meta name="twitter:url" content="https://www.rubijhudson.com/">
-<meta name="twitter:card" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
-<meta name="twitter:creator" content="@undo_hubris">
-<meta name="twitter:image" content="img/rubi_hudson.jpeg"> 
-
-<!--
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
--->
-<link rel="stylesheet" type="text/css"
-    href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
-<link rel="stylesheet" type="text/css"
-    href="css/main.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rubi Hudson</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<body>
+    <div class="container">
+        <header>
+            <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
+            <h1>Rubi Hudson</h1>
+        </header>
+        
+        <nav>
+            <ul>
+                <li><a href="https://rubijhudson.com/" class="active">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="CV.pdf">CV</a></li>
+                <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
+            </ul>
+        </nav>
 
-
-<br />
-
-<!-- DESKTOP IMG + NAV -->
-<div class="desktopleft"> 
-    <img src="img/rubi_hudson.jpeg" id="desktopphoto" width="100%" align="top"/> 
-
-    <ul id="desktopnav"> 
-        <li><a class="active" href="https://rubijhudson.com/"> Home </a></li> 
-        <li><a href="research.html"> Research </a></li> 
-        <li><a href="CV.pdf"> CV</a> 
-        <li><a href="https://crossingtherubicon.substack.com/"> Blog </a></li>
-	</ul> 
-
-    <ul id="desktopcontact">
-        <img src="img/email_icon.svg" id="desktopsocial"> Email: rubijhudson@gmail.com
-        <br>
-        <img src="img/twitter_icon.svg" id="desktopsocial"> Twitter: <a href="https://www.twitter.com/undo_hubris">@undo_hubris</a>
-		<br>
-		<img src="img/github_icon.svg" id="desktopsocial"> GitHub: <a href="https://github.com/rubi-hudson">rubi-hudson</a>
-    </ul>
-</div>
-
-
-<!-- MOBILE IMG + NAV -->
-<h1 id="mobiletop">Rubi Hudson</h1>
-
-<img src="img/rubi_hudson.jpeg" id="mobilephoto" width="100%" align="top" /> 
-<div class="mobileleft">
-    <ul id="mobilenav">
-        <li><a class="active" href="https://rubijhudson.com/"> Home </a></li> 
-        <li><a href="research.html"> Research </a></li> 
-        <li><a href="CV.pdf"> CV</a> 
-        <li><a href="https://crossingtherubicon.substack.com/"> Blog </a></li>
-    </ul>
-
-    <ul id="mobilecontact">
-        <img src="img/email_icon.svg" id="mobilesocial"> Email: rubijhudson@gmail.com
-        <br>
-        <img src="img/twitter_icon.svg" id="mobilesocial"> Twitter: <a href="https://www.twitter.com/undo_hubris">@undo_hubris</a>
-		<br>
-		<img src="img/github_icon.svg" id="mobilesocial"> GitHub: <a href="https://github.com/rubi-hudson">rubi-hudson</a>
-    </ul>
-
-</div>
-
-
-
-
-<!-- TEXT -->
-<div class="right" padding-right="50px">
-<h1 id="desktoptop">Rubi Hudson</h1>
-
-<hr class="mobilehr">
-
-<p>
-Lorem Ipsum
-</p>
-
-<p>Lorem Ipsum
-</p>
-
-
-
+        <main>
+            <section>
+                <h2>About Me</h2>
+                <p>Lorem Ipsum</p>
+            </section>
+            <section>
+                <h2>Recent Work</h2>
+                <p>Lorem Ipsum</p>
+            </section>
+        </main>
+    </div>
+</body>
 </html>
