--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubi Hudson</title>
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Computer+Modern+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <header>
+        <aside class="sidebar">
             <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
-            <h1>Rubi Hudson</h1>
-        </header>
-        
-        <nav>
-            <ul>
-                <li><a href="https://rubijhudson.com/" class="active">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="CV.pdf">CV</a></li>
-                <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
+            <nav>
+                <ul>
+                    <li><a href="https://rubijhudson.com/" class="active">Home</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="CV.pdf">CV</a></li>
+                    <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
+                </ul>
+            </nav>
+            <ul class="contact-links">
+                <li><a href="mailto:your.email@example.com">Email</a></li>
+                <li><a href="https://github.com/yourusername">GitHub</a></li>
+                <li><a href="https://twitter.com/yourusername">Twitter</a></li>
             </ul>
-        </nav>
+        </aside>
 
         <main>
+            <h1>Rubi Hudson</h1>
             <section>
-                <h2>About Me</h2>
                 <p>Lorem Ipsum</p>
             </section>
             <section>
-                <h2>Recent Work</h2>
                 <p>Lorem Ipsum</p>
             </section>
         </main>
