--- a/index.html
+++ b/index.html
@@ -2,38 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubi Hudson</title>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Computer+Modern+Sans&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
+    <meta name="keywords" content="Rubi Hudson, University of Toronto, economics, AI, artificial intelligence, AI safety, mechanism design">
+    <meta name="twitter:title" content="Rubi Hudson">
+    <meta name="twitter:url" content="https://www.rubijhudson.com/">
+    <meta name="twitter:card" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
+    <meta name="twitter:creator" content="@undo_hubris">
+    <meta name="twitter:image" content="img/rubi_hudson.jpeg">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
     <div class="container">
-        <aside class="sidebar">
+        <div class="sidebar">
             <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
             <nav>
                 <ul>
-                    <li><a href="https://rubijhudson.com/" class="active">Home</a></li>
+                    <li><a class="active" href="https://rubijhudson.com/">Home</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="CV.pdf">CV</a></li>
                     <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
                 </ul>
             </nav>
-            <ul class="contact-links">
-                <li><a href="mailto:your.email@example.com">Email</a></li>
-                <li><a href="https://github.com/yourusername">GitHub</a></li>
-                <li><a href="https://twitter.com/yourusername">Twitter</a></li>
-            </ul>
-        </aside>
-
+            <div class="contact-info">
+                <p><img src="img/email_icon.svg" alt="Email"> Email: rubijhudson@gmail.com</p>
+                <p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris">@undo_hubris</a></p>
+                <p><img src="img/github_icon.svg" alt="GitHub"> GitHub: <a href="https://github.com/rubi-hudson">rubi-hudson</a></p>
+            </div>
+        </div>
         <main>
             <h1>Rubi Hudson</h1>
-            <section>
-                <p>Lorem Ipsum</p>
-            </section>
-            <section>
-                <p>Lorem Ipsum</p>
-            </section>
+            <hr>
+            <p>Lorem Ipsum</p>
+            <p>Lorem Ipsum</p>
         </main>
     </div>
 </body>
