--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
     <meta name="keywords" content="Rubi Hudson, University of Toronto, economics, AI, artificial intelligence, AI safety, mechanism design">
-    <meta name="twitter:title" content="Rubi Hudson">
-    <meta name="twitter:url" content="https://www.rubijhudson.com/">
-    <meta name="twitter:card" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
-    <meta name="twitter:creator" content="@undo_hubris">
-    <meta name="twitter:image" content="img/rubi_hudson.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -20,7 +16,7 @@
             <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
             <nav>
                 <ul>
-                    <li><a class="active" href="https://rubijhudson.com/">Home</a></li>
+                    <li><a class="active" href="/">Home</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="CV.pdf">CV</a></li>
                     <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
