--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
             </nav>
             <div class="contact-info">
                 <p><img src="img/email_icon.svg" alt="Email"> Email: <a href="mailto:rubijhudson@gmail.com" class="social-link">rubijhudson@gmail.com</a></p>
-                <p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris" class="social-link">@undo_hubris</a></p>
                 <p><img src="img/github_icon.svg" alt="GitHub"> GitHub: <a href="https://github.com/rubi-hudson" class="social-link">rubi-hudson</a></p>
+				<p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris" class="social-link">@undo_hubris</a></p>
             </div>
         </div>
         <main>
             <h1>Rubi Hudson</h1>
             <hr>
-            <p>Lorem Ipsum</p>
-            <p>Lorem Ipsum</p>
+            <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.</p>
+            <p>I previously received a BMath degree from the University of Waterloo, and participated in one of the first cohorts of the MATS program. I also organize the Mechanism Design for AI Safety reading group.</p>
+			<p>If you have thoughts about my research or related areas, please feel free to reach out!</p>
         </main>
     </div>
 </body>
