--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a class="active" href="/">Home</a></li>
                     <li><a href="research.html">Research</a></li>
-                    <li><a href="CV.pdf">CV</a></li>
+                    <li><a href="fles/Hudson, Rubi - Academic CV.pdf">CV</a></li>
                     <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
                 </ul>
             </nav>
@@ -32,8 +32,8 @@
             <h1>Rubi Hudson</h1>
             <hr>
             <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.</p>
-            <p>I previously received a BMath degree from the University of Waterloo, and participated in one of the first cohorts of the MATS program. I also organize the Mechanism Design for AI Safety reading group.</p>
-			<p>If you have thoughts about my research or related areas, please feel free to reach out!</p>
+            <p>Previously, I received a BMath degree from the University of Waterloo, and was an early participant in the MATS program. I currently organize the Mechanism Design for AI Safety reading group.</p>
+			<p>If you have thoughts or questions about my research and related areas, please feel free to reach out!</p>
         </main>
     </div>
 </body>
