--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a class="active" href="/">Home</a></li>
                     <li><a href="research.html">Research</a></li>
-                    <li><a href="fles/Hudson, Rubi - Academic CV.pdf">CV</a></li>
+                    <li><a href="files/Hudson, Rubi - Academic CV.pdf">CV</a></li>
                     <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
                 </ul>
             </nav>
