--- a/index.html
+++ b/index.html
@@ -2,39 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubi Hudson</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.">
-    <meta name="keywords" content="Rubi Hudson, University of Toronto, economics, AI, artificial intelligence, AI safety, mechanism design">
-	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Titillium+Web:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
             <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
+            
             <nav>
                 <ul>
-                    <li><a class="active" href="/">Home</a></li>
+                    <li><a href="/" class="active">Home</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="files/Hudson, Rubi - Academic CV.pdf">CV</a></li>
                     <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
                 </ul>
             </nav>
-            <div class="contact-info">
-                <p><img src="img/email_icon.svg" alt="Email"> Email: <a href="mailto:rubijhudson@gmail.com" class="social-link">rubijhudson@gmail.com</a></p>
-                <p><img src="img/github_icon.svg" alt="GitHub"> GitHub: <a href="https://github.com/rubi-hudson" class="social-link">rubi-hudson</a></p>
-				<p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris" class="social-link">@undo_hubris</a></p>
-            </div>
         </div>
+
         <main>
             <h1>Rubi Hudson</h1>
             <hr>
             <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.</p>
             <p>Previously, I received a BMath degree from the University of Waterloo, and was an early participant in the MATS program. I currently organize the Mechanism Design for AI Safety reading group.</p>
-			<p>If you have thoughts or questions about my research and related areas, please feel free to reach out!</p>
+            <p>If you have thoughts or questions about my research and related areas, please feel free to reach out!</p>
         </main>
+
+        <footer class="footer">
+            <div class="contact-info">
+                <a href="mailto:rubijhudson@gmail.com" class="social-link">
+                    <img src="img/email_icon.svg" alt="Email">
+                    rubijhudson@gmail.com
+                </a>
+                <a href="https://github.com/rubi-hudson" class="social-link">
+                    <img src="img/github_icon.svg" alt="GitHub">
+                    rubi-hudson
+                </a>
+                <a href="https://www.twitter.com/undo_hubris" class="social-link">
+                    <img src="img/twitter_icon.svg" alt="Twitter">
+                    @undo_hubris
+                </a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
