--- a/index.html
+++ b/index.html
@@ -36,5 +36,21 @@
 			<p>If you have thoughts or questions about my research and related areas, please feel free to reach out!</p>
         </main>
     </div>
+	<footer class="footer">
+        <div class="contact-info">
+            <a href="mailto:rubijhudson@gmail.com" class="social-link">
+                <img src="img/email_icon.svg" alt="Email">
+                rubijhudson@gmail.com
+            </a>
+            <a href="https://github.com/rubi-hudson" class="social-link">
+                <img src="img/github_icon.svg" alt="GitHub">
+                rubi-hudson
+            </a>
+            <a href="https://www.twitter.com/undo_hubris" class="social-link">
+                <img src="img/twitter_icon.svg" alt="Twitter">
+                @undo_hubris
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
