--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
                 </ul>
             </nav>
+            <div class="contact-info">
+                <p><img src="img/email_icon.svg" alt="Email"> Email: <a href="mailto:rubijhudson@gmail.com" class="social-link">rubijhudson@gmail.com</a></p>
+                <p><img src="img/github_icon.svg" alt="GitHub"> GitHub: <a href="https://github.com/rubi-hudson" class="social-link">rubi-hudson</a></p>
+				<p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris" class="social-link">@undo_hubris</a></p>
+            </div>
         </div>
         <main>
             <h1>Rubi Hudson</h1>
@@ -31,21 +36,5 @@
 			<p>If you have thoughts or questions about my research and related areas, please feel free to reach out!</p>
         </main>
     </div>
-	<footer class="footer">
-        <div class="contact-info">
-            <a href="mailto:rubijhudson@gmail.com" class="social-link">
-                <img src="img/email_icon.svg" alt="Email">
-                rubijhudson@gmail.com
-            </a>
-            <a href="https://github.com/rubi-hudson" class="social-link">
-                <img src="img/github_icon.svg" alt="GitHub">
-                rubi-hudson
-            </a>
-            <a href="https://www.twitter.com/undo_hubris" class="social-link">
-                <img src="img/twitter_icon.svg" alt="Twitter">
-                @undo_hubris
-            </a>
-        </div>
-    </footer>
 </body>
 </html>
