--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <main>
             <h1>Rubi Hudson</h1>
             <hr>
-            <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on topics in mechanism design and game theory, especially as they relate to AI safety.</p>
+            <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on microeconomic theory, especially as it relates to AI alignment.</p>
             <p>Previously, I received a BMath degree from the University of Waterloo, and was an early participant in the MATS program. I currently organize the Mechanism Design for AI Safety reading group.</p>
-			<p>If you have thoughts or questions about my research and related areas, please feel free to reach out!</p>
+			<p>If you have thoughts or questions about my research and related topics, please feel free to reach out!</p>
         </main>
     </div>
 </body>
