--- a/index.html
+++ b/index.html
@@ -13,21 +13,26 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
-            <nav>
-                <ul>
-                    <li><a class="active" href="/">Home</a></li>
-                    <li><a href="research.html">Research</a></li>
-                    <li><a href="files/Hudson, Rubi - Academic CV.pdf">CV</a></li>
-                    <li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
-                </ul>
-            </nav>
-            <div class="contact-info">
-                <p><img src="img/email_icon.svg" alt="Email"> Email: <a href="mailto:rubijhudson@gmail.com" class="social-link">rubijhudson@gmail.com</a></p>
-                <p><img src="img/github_icon.svg" alt="GitHub"> GitHub: <a href="https://github.com/rubi-hudson" class="social-link">rubi-hudson</a></p>
-				<p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris" class="social-link">@undo_hubris</a></p>
-            </div>
-        </div>
+			<div class="sidebar-content">
+				<div class="mobile-name">Rubi Hudson</div>
+				<img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
+				<div class="sidebar-info">
+					<nav>
+						<ul>
+							<li><a class="active" href="/">Home</a></li>
+							<li><a href="research.html">Research</a></li>
+							<li><a href="files/Hudson, Rubi - Academic CV.pdf">CV</a></li>
+							<li><a href="https://crossingtherubicon.substack.com/">Blog</a></li>
+						</ul>
+					</nav>
+				<div class="contact-info">
+					<p><img src="img/email_icon.svg" alt="Email"> Email: <a href="mailto:rubijhudson@gmail.com" class="social-link">rubijhudson@gmail.com</a></p>
+					<p><img src="img/github_icon.svg" alt="GitHub"> GitHub: <a href="https://github.com/rubi-hudson" class="social-link">rubi-hudson</a></p>
+					<p><img src="img/twitter_icon.svg" alt="Twitter"> Twitter: <a href="https://www.twitter.com/undo_hubris"class="social-link">@undo_hubris</a></p>
+				</div>
+				</div>
+			</div>
+		</div>
         <main>
             <h1>Rubi Hudson</h1>
             <hr>
