--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Rubi Hudson</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="Rubi Hudson, University of Toronto, economics, AI, artificial intelligence, AI safety, mechanism design">
+	<link rel="icon" type="image/svg+xml" href="/img/uoft_icon.svg">
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Titillium+Web:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
