--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
 		<div class="sidebar-content">
         <div class="mobile-name">Rubi Hudson — Research</div>
         <div class="photo-info-container">
-            <img src="img/rubi_hudson.jpeg" alt="Rubi Hudson" class="profile-photo">
+            <img src="img/rubi_hudson.jpg" alt="Rubi Hudson" class="profile-photo">
             <div class="sidebar-info">
                 <nav>
                     <ul>
