--- a/research.html
+++ b/research.html
@@ -67,7 +67,7 @@
 			</div>
 			<h2>Working Papers</h2>
 			<p class="paper-entry">Joint Scoring Rules</p>
-			<p  class="paper-follow-up">Summary Post</p>
+			<p  class="paper-follow-up"><a href="https://www.alignmentforum.org/posts/FFCDWx6qBdBds6jvL/safe-predictive-agents-with-joint-scoring-rules">Summary Post</a></p>
 			<p  class="paper-follow-up"><a href="files/Joint Scoring Rules - Technical Appendix.pdf">Technical Appendix</a></p>
         </main>
     </div>
