--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <main>
             <h1>Rubi Hudson</h1>
             <hr>
-            <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on microeconomic theory, especially as it relates to AI alignment.</p>
+            <p>I am a 3rd year Economics PhD student at the University of Toronto. My current research focuses on AI alignment, using tools from microeconomic theory to model incentives. I also work on economic modelling of transformative AI.</p>
             <p>Previously, I received a BMath degree from the University of Waterloo, and was an early participant in the MATS program. I currently organize the Mechanism Design for AI Safety reading group.</p>
 			<p>If you have thoughts or questions about my research and related topics, please feel free to reach out!</p>
         </main>
