--- a/research.html
+++ b/research.html
@@ -39,8 +39,24 @@
         <main>
             <h1>Rubi Hudson — Research</h1>
             <hr>
+			<p class="paper-entry"><a href="https://arxiv.org/abs/2412.20732">Joint Scoring Rules: Zero-Sum Competition Avoids Performative Prediction</a></p>
+			<p class="paper-follow-up"><span style="font-style: italic;">Rubi Hudson</span></p>
+			<p class="paper-follow-up">Proceedings of the AAAI Conference on Artificial Intelligence, 2025</p>
+			<a id="ihpppsr" href="javascript:expandIt(abihpppsr, ihpppsr)" style="text-decoration: none;">
+				&#9656 Abstract
+			</a>
+			</nobr>
+
+			<div id="abihpppsr" style="display: none; padding-left: 18">
+			<p style="padding-left: 30;">
+			In a decision-making scenario, a principal could use conditional predictions from an expert agent to inform their choice. However, this approach would introduce a fundamental conflict of interest. An agent optimizing for predictive accuracy is incentivized to manipulate their principal towards more predictable actions, which prevents that principal from being able to deterministically select their true preference. We demonstrate that this impossibility result can be overcome through the joint evaluation of multiple agents. When agents are made to engage in zero-sum competition, their incentive to influence the action taken is eliminated, and the principal can identify and take the action they most prefer. We further prove that this zero-sum setup is unique, efficiently implementable, and applicable under stochastic choice. Experiments in a toy environment demonstrate that training on a zero-sum objective significantly enhances both predictive accuracy and principal utility, and can eliminate previously learned manipulative behavior.
+			</p>
+			<p  class="paper-follow-up"><a href="https://www.alignmentforum.org/posts/FFCDWx6qBdBds6jvL/safe-predictive-agents-with-joint-scoring-rules">Summary Post</a></p>
+			<p  class="paper-follow-up"><a href="https://arxiv.org/src/2412.20732/anc/Technical_Appendix.pdf">Technical Appendix</a></p>
+			<p  class="paper-follow-up"><a href="https://github.com/rubi-hudson/Joint-Scoring-Rules">Code</a></p>
+			</div>
             <p class="paper-entry"><a href="https://proceedings.mlr.press/v216/oesterheld23a.html">Incentivizing honest performative predictions with proper scoring rules</a></p>
-			<p class="paper-follow-up">with Caspar Oesterheld, Johannes Treutlein, and Emery Cooper</p>
+			<p class="paper-follow-up">Caspar Oesterheld*, Johannes Treutlein*, Emery Cooper, and <span style="font-style: italic;">Rubi Hudson</span></p>
 			<p class="paper-follow-up">Uncertainty in Artificial Intelligence, 2023</p>
 			<a id="ihpppsr" href="javascript:expandIt(abihpppsr, ihpppsr)" style="text-decoration: none;">
 				&#9656 Abstract
@@ -53,7 +69,7 @@
 			</p>
 			</div>
 			<p class="paper-entry"><a href="https://arxiv.org/abs/2302.00805">Conditioning predictive models: Risks and strategies</a></p>
-			<p  class="paper-follow-up">with Evan Hubinger, Adam Jermyn, Johannes Treutlein, and Kate Woolverton </p>
+			<p  class="paper-follow-up">Evan Hubinger, Adam Jermyn, Johannes Treutlein, <span style="font-style: italic;">Rubi Hudson</span>, and Kate Woolverton </p>
 			<p class="paper-follow-up">arXiv, 2023</p>
 			<a id="cpmrs" href="javascript:expandIt(abcpmrs, cpmrs)" style="text-decoration: none;">
 				&#9656 Abstract
@@ -65,10 +81,9 @@
 			Our intention is to provide a definitive reference on what it would take to safely make use of generative/predictive models in the absence of a solution to the Eliciting Latent Knowledge problem. Furthermore, we believe that large language models can be understood as such predictive models of the world, and that such a conceptualization raises significant opportunities for their safe yet powerful use via carefully conditioning them to predict desirable outputs. Unfortunately, such approaches also raise a variety of potentially fatal safety problems, particularly surrounding situations where predictive models predict the output of other AI systems, potentially unbeknownst to us. There are numerous potential solutions to such problems, however, primarily via carefully conditioning models to predict the things we want (e.g. humans) rather than the things we don't (e.g. malign AIs). Furthermore, due to the simplicity of the prediction objective, we believe that predictive models present the easiest inner alignment problem that we are aware of. As a result, we think that conditioning approaches for predictive models represent the safest known way of eliciting human-level and slightly superhuman capabilities from large language models and other similar future models.
 			</p>
 			</div>
-			<h2>Working Papers</h2>
-			<p class="paper-entry">Joint Scoring Rules</p>
-			<p  class="paper-follow-up"><a href="https://www.alignmentforum.org/posts/FFCDWx6qBdBds6jvL/safe-predictive-agents-with-joint-scoring-rules">Summary Post</a></p>
-			<p  class="paper-follow-up"><a href="files/Joint Scoring Rules - Technical Appendix.pdf">Technical Appendix</a></p>
+			<h2>Under Review</h2>
+			<p class="paper-entry">Superalignment Anti-Literature Review</p>
+			<p  class="paper-follow-up">Michael Cohen*, <span style="font-style: italic;">Rubi Hudson</span>*, and Yoshua Bengio </p>
         </main>
     </div>
 <script>
