--- a/research.html
+++ b/research.html
@@ -42,12 +42,12 @@
 			<p class="paper-entry"><a href="https://arxiv.org/abs/2412.20732">Joint Scoring Rules: Zero-Sum Competition Avoids Performative Prediction</a></p>
 			<p class="paper-follow-up"><span style="font-style: italic;">Rubi Hudson</span></p>
 			<p class="paper-follow-up">Proceedings of the AAAI Conference on Artificial Intelligence, 2025</p>
-			<a id="ihpppsr" href="javascript:expandIt(abihpppsr, ihpppsr)" style="text-decoration: none;">
+			<a id="jsrzscapp" href="javascript:expandIt(abjsrzscap, jsrzscap)" style="text-decoration: none;">
 				&#9656 Abstract
 			</a>
 			</nobr>
 
-			<div id="abihpppsr" style="display: none; padding-left: 18">
+			<div id="abjsrzscap" style="display: none; padding-left: 18">
 			<p style="padding-left: 30;">
 			In a decision-making scenario, a principal could use conditional predictions from an expert agent to inform their choice. However, this approach would introduce a fundamental conflict of interest. An agent optimizing for predictive accuracy is incentivized to manipulate their principal towards more predictable actions, which prevents that principal from being able to deterministically select their true preference. We demonstrate that this impossibility result can be overcome through the joint evaluation of multiple agents. When agents are made to engage in zero-sum competition, their incentive to influence the action taken is eliminated, and the principal can identify and take the action they most prefer. We further prove that this zero-sum setup is unique, efficiently implementable, and applicable under stochastic choice. Experiments in a toy environment demonstrate that training on a zero-sum objective significantly enhances both predictive accuracy and principal utility, and can eliminate previously learned manipulative behavior.
 			</p>
