--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
 			<p class="paper-entry"><a href="https://arxiv.org/abs/2412.20732">Joint Scoring Rules: Zero-Sum Competition Avoids Performative Prediction</a></p>
 			<p class="paper-follow-up"><span style="font-style: italic;">Rubi Hudson</span></p>
 			<p class="paper-follow-up">Proceedings of the AAAI Conference on Artificial Intelligence, 2025</p>
-			<p  class="paper-follow-up"><a href="https://arxiv.org/src/2412.20732/anc/Technical_Appendix.pdf">Technical Appendix</a>,<a href="https://github.com/rubi-hudson/Joint-Scoring-Rules">Code</a>, <a href="https://www.alignmentforum.org/posts/FFCDWx6qBdBds6jvL/safe-predictive-agents-with-joint-scoring-rules">Summary Post</a></p>
+			<p  class="paper-follow-up"><a href="https://arxiv.org/src/2412.20732/anc/Technical_Appendix.pdf" style="text-decoration: underline;">Technical Appendix</a>, <a href="https://github.com/rubi-hudson/Joint-Scoring-Rules" style="text-decoration: underline;">Code</a>, <a href="https://www.alignmentforum.org/posts/FFCDWx6qBdBds6jvL/safe-predictive-agents-with-joint-scoring-rules" style="text-decoration: underline;">Summary Post</a></p>
 			<a id="jsrzscapp" href="javascript:expandIt(abjsrzscapp, jsrzscapp)" style="text-decoration: none;">
 				&#9656 Abstract
 			</a>
