--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Rubi Hudson</h1>
             <hr>
             <p>I am a 4th year Economics PhD student at the University of Toronto. My current research focuses on AI alignment, using tools from microeconomic theory to model the incentives of agents. I am also interested in economic modelling of transformative AI.</p>
-            <p>From May-August 2025, I am visiting the Center for Human-Compatible AI (CHAI) at UC Berkeley. I organize irregular meetings of the Mechanism Design for AI Safety (MDAIS) reading group, which you can sign up for <a href="https://docs.google.com/forms/d/1p-R-WIuTaLabx2RNEXdP2_KdISj_yCPh4H9vX-ZnA3c/">here</a>. Previously, I received a BMath degree from the University of Waterloo, and was an early participant in the MATS program. </p>
+            <p>From May-August 2025, I am visiting the Center for Human-Compatible AI (CHAI) at UC Berkeley. I organize irregular meetings of the Mechanism Design for AI Safety (MDAIS) reading group, which you can sign up for <a href="https://docs.google.com/forms/d/1p-R-WIuTaLabx2RNEXdP2_KdISj_yCPh4H9vX-ZnA3c/">here</a>. Previously, I received a BMath degree from the University of Waterloo, and was an early participant in the Machine Learning Alignment Theory Scholars (MATS) program. </p>
 			<p>If you have thoughts or questions about my research and related topics, please feel free to reach out!</p>
         </main>
     </div>
