--- a/research.html
+++ b/research.html
@@ -88,6 +88,10 @@
 
 			<p class="paper-entry"><a href="https://arxiv.org/abs/2510.15395">Corrigibility Transformation: Constructing Goals That Accept Updates</a></p>
 			<p class="paper-follow-up"><span style="font-style: italic;">Rubi Hudson</span></p>
+
+			<h2>Working Papers</h2>
+			<p class="paper-entry"><a href="files/Simplifying Predictions.pdf">Formal Incentives for Simplifying Predictions</a></p>
+
         </main>
     </div>
 <script>
